@@ -8,10 +8,8 @@ import javax.validation.ConstraintViolation;
 import javax.validation.Validation;
 import javax.validation.Validator;
 import javax.validation.ValidatorFactory;
-import javax.validation.constraints.NotBlank;
 import javax.validation.constraints.NotNull;
 import java.lang.annotation.Annotation;
-import java.util.Collections;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Set;
@@ -19,10 +17,10 @@ import java.util.stream.Collectors;
 
 import static org.junit.jupiter.api.Assertions.assertTrue;
 
-class InstitutionResourceTest {
+class GeographicTaxonomyListDtoTest {
 
     private Validator validator;
-    private static final InstitutionResource INSTITUTION_RESOURCE = TestUtils.mockInstance(new InstitutionResource());
+
 
     @BeforeEach
     void setUp() {
@@ -30,29 +28,17 @@ class InstitutionResourceTest {
         validator = validatorFactory.getValidator();
     }
 
+
     @Test
     void validateNullFields() {
-        // given
+        //given
         HashMap<String, Class<? extends Annotation>> toCheckMap = new HashMap<>();
-        toCheckMap.put("id", NotBlank.class);
-        toCheckMap.put("externalId", NotBlank.class);
-        toCheckMap.put("origin", NotBlank.class);
-        toCheckMap.put("originId", NotBlank.class);
-        toCheckMap.put("name", NotBlank.class);
-        toCheckMap.put("mailAddress", NotBlank.class);
-        toCheckMap.put("fiscalCode", NotBlank.class);
-        toCheckMap.put("userRole", NotBlank.class);
-        toCheckMap.put("status", NotBlank.class);
-        toCheckMap.put("address", NotBlank.class);
-        toCheckMap.put("zipCode", NotBlank.class);
-        toCheckMap.put("geographicTaxonomies", NotNull.class);
-        InstitutionResource institutionResource = new InstitutionResource();
-        institutionResource.setInstitutionType(null);
-        institutionResource.setRecipientCode(null);
+        toCheckMap.put("geographicTaxonomyDtoList", NotNull.class);
+        GeographicTaxonomyListDto geographicTaxonomyListDto = new GeographicTaxonomyListDto();
 
-        // when
-        Set<ConstraintViolation<Object>> violations = validator.validate(institutionResource);
-        // then
+        //when
+        Set<ConstraintViolation<Object>> violations = validator.validate(geographicTaxonomyListDto);
+        //then
         List<ConstraintViolation<Object>> filteredViolations = violations.stream()
                 .filter(violation -> {
                     Class<? extends Annotation> annotationToCheck = toCheckMap.get(violation.getPropertyPath().toString());
@@ -62,12 +48,14 @@ class InstitutionResourceTest {
         assertTrue(filteredViolations.isEmpty());
     }
 
+
     @Test
     void validateNotNullFields() {
         // given
-        INSTITUTION_RESOURCE.setGeographicTaxonomies(Collections.emptyList());
+        GeographicTaxonomyListDto model = TestUtils.mockInstance(new GeographicTaxonomyListDto());
+        model.setGeographicTaxonomyDtoList(List.of(TestUtils.mockInstance(new GeographicTaxonomyDto())));
         // when
-        Set<ConstraintViolation<Object>> violations = validator.validate(INSTITUTION_RESOURCE);
+        Set<ConstraintViolation<Object>> violations = validator.validate(model);
         // then
         assertTrue(violations.isEmpty());
     }
